Fix clipping bullet points in list

--- a/src/components/base-components/custom-list/styles.css
+++ b/src/components/base-components/custom-list/styles.css
@@ -19,7 +19,8 @@ custom-list {
         }
     }
     & ul {
-        padding-inline-start: 1em;
+        padding-inline-start: 0;
+        padding-left: 1.5em;
         margin-block: 0;
         display: block;
         &.has-title {
